--- a/.github/workflows/build-gradle-project.yml
+++ b/.github/workflows/build-gradle-project.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run Tests
-        run: grade test
+        run: gradle test
